--- a/assets/scss/_main-custom.scss
+++ b/assets/scss/_main-custom.scss
@@ -1,4 +1,7 @@
 /* top-level custom stuff */
+html {
+  overflow-y: scroll;
+}
 body {
   font-family: 'Montserrat', sans-serif;
   /*background: url('http://placehold.it/1920x1080') no-repeat center center fixed;
@@ -77,19 +80,19 @@ p.link-anim:focus {
 }
 
 @media screen and (max-width:991px) {
-	#navbar-txt-right {
-		-webkit-animation: mover 1s 1;
-		animation: mover 1s 1;
-	}
+	// #navbar-txt-right {
+	// 	-webkit-animation: mover 1s 1;
+	// 	animation: mover 1s 1;
+	// }
 	h2.title {
 		font-size:3rem;
 	}
 }
 @media screen and (min-width:992px) {
-	#navbar-txt-right, #navbar-txt-left {
-		-webkit-animation: mover 1s 1;
-		animation: mover 1s 1;
-	}
+	// #navbar-txt-right, #navbar-txt-left {
+	// 	-webkit-animation: mover 1s 1;
+	// 	animation: mover 1s 1;
+	// }
 	h2.title {
 		font-size:4rem;
 	}
@@ -114,6 +117,12 @@ p.link-anim:focus {
 		display:none;
 	}
 /* */
+
+	.shift-nav {
+		@media screen and (min-width:992px) {
+			margin-left:7px;
+		}
+	}
 
 
 /* portfolio */
@@ -421,16 +430,13 @@ p.link-anim:focus {
 	}
 
 	@media screen and (max-width:550px) {
-		.no-scroll {
-			overflow:hidden;
-		}
 		#home-title,
 		h2.contact-title {
 			margin-top:-200px !important;
 		}
 		.minh-100vh.title-page,
 		#contact-content.minh-100vh {
-			overflow:hidden;
+			overflow-x:hidden;
 			min-height:none;
 			max-height:90vh;
 		}
@@ -445,7 +451,6 @@ p.link-anim:focus {
 		.minh-100vh.title-page,
 		#contact-content.minh-100vh {
 			min-height:none;
-			overflow-y:hidden;
 		}
 		#home-title {
 			font-size:3.5rem;
